# ai-developer-copilot

./: .gitignore  PROJECT_ANALYSIS.md  README.md  UPGRADE_PLAN.md  app.py  app.py.broken  document_loader.py  embeddings.py  main.py  pyproject.toml  rag_chain.py  test_embed.py  vector_store.py
docs/: Agent(智能体、代理).md  FastAPI笔记.md  LainChain笔记.md  Python笔记.md  RAG(检索增强生成).md  大语言模型（LLM）.md  提示词工程.md  项目文件架构.md
knowledge_bases/: kb_metadata.json
modules/: __init__.py  agent_system.py  code_analyzer.py  conversation_memory.py  error_diagnosis.py  knowledge_base.py  note_generator.py
