[project]
name = "ai-developer-copilot"
version = "1.0.0"
description = "AI Developer Copilot - 面向开发者的智能助手"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langgraph>=0.3.0",
    "langchain-openai>=0.3.0",
    "faiss-cpu>=1.9.0",
    "pypdf>=6.11.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "gitpython>=3.1.40",
    "pyyaml>=6.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.22.0",
    "tree-sitter-javascript>=0.20.0",
]
